# blacksheep-chat-backend

./: README.md  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/docs/: __init__.py  binders.py
